GNOME Bugzilla – Bug 679407
GST_PLUGIN_PATH and GST_REGISTRY override broken for dual install
Last modified: 2012-07-05 14:41:49 UTC
If both GStreamer 0.10 and GStreamer 1.0 are used, overriding GST_REGISTRY for one will override it for the other as well, causing problems as both versions use the same file.
GST_PLUGIN_PATH is also overridden, and that really breaks stuff.
This should hopefully help: commit bcec051a5f4e3157c715cb6fb7c693d1a8bf509a Author: Tim-Philipp Müller <tim.muller@collabora.co.uk> Date: Wed Jul 4 18:16:23 2012 +0100 Add versioned variants of some environment variables Improve parallel installability in setups like jhbuild by providing versioned variants of some environment variables: GST_REGISTRY_1_0 GST_PLUGIN_PATH_1_0 GST_PLUGIN_SYSTEM_PATH_1_0 GST_PLUGIN_SCANNER_1_0 will now be checked before checking the unversioned ones. https://bugzilla.gnome.org/show_bug.cgi?id=679407
Created attachment 218097 [details] [review] Fix handling of parallel installable GStreamers If GStreamer 1.0 and 0.10 were used in the same prefix, they would end up with mixed plugin paths, and the same registry, even though the 2 systems are not compatible. Fix this by using GStreamer-1.0 specific envvars.
Attachment 218097 [details] pushed as d730be6 - Fix handling of parallel installable GStreamers